# SleepStagePrediction

./: pyproject.toml
sleep_stage_prediction/datasets/: dataset_gen.py  utils.py
sleep_stage_prediction/functions/: __init__.py  learning_rate.py  loss.py  metrics.py
sleep_stage_prediction/minimal_example/: to_h5.py  train_and_evaluate.ipynb  train_and_evaluate.py
sleep_stage_prediction/models/: __init__.py  utils.py
sleep_stage_prediction/models/CNN/: __init__.py  resunet.py
sleep_stage_prediction/signal_processing/: __init__.py  feature_extraction.py  normalization.py  postprocessing.py  regularization.py  spectrogram.py  superlet.py
sleep_stage_prediction/signal_processing/ggir_ext/: __init__.py  features.py  utils.py
sleep_stage_prediction/utils/: AveragePooling.py  __init__.py  any_formating.py  binary_to_array.py  buffer.py  change_names.py  check_inf_nan.py  create_directory_tree.py  csv_handler.py  data_from_h5.py  inverse_events.py  jaccard_overlap.py  merge_dict.py  miscellaneous.py  non_max_suppression.py  resample_binary_vector.py  save_load_variables.py  semantic_formating.py  stats.py  visualize.py
