[tool.poetry]
name = "sleep-stage-prediction"
version = "0.1.0"
description = ""
authors = ["Amin Nikoukaran <aminnikookaran@gmail.com>"]
readme = "README.md"
packages = [{include = "sleep_stage_prediction"}]

[tool.poetry.dependencies]
python = "~3.8"
tensorflow = "2.6.2"
numpy = "1.19.5"
matplotlib = "3.3.4"
seaborn = "0.11.2"
joblib = "0.13.2"
tqdm = "4.46.0"
h5py = "3.1.0"
scikit-learn = "0.24.2"
scipy = "1.5.4"
pandas = "1.1.5"
pyedflib = "0.1.17"
statannot = "0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
